export const snapshot = {};

snapshot[`global > get one data point 1`] = `"Async payload"`;

snapshot[`global > get one data point 2`] = `"in time"`;

snapshot[`global > get all 1`] = `
{
  bar: 123,
  foo: "bar",
}
`;

snapshot[`global > get all 2`] = `
{
  bar: 123,
  foo: "😎",
}
`;

snapshot[`global > get all 3`] = `
{
  bar: 123,
  foo: "☂️",
}
`;

snapshot[`global > get all 4`] = `
{
  bar: 123,
  foo: "🌊",
}
`;

snapshot[`global > get all 5`] = `
{
  bar: 123,
  foo: "🏄‍♂️",
}
`;

snapshot[`global > get all 6`] = `
{
  bar: 123,
  foo: "Async payload",
}
`;
